--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "strict": true,
         "isolatedModules": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
         "jsx": "react"
     }
 }
